Домашнее задание со Stream Api